first lauchable site

--- a/Projet5/appsettings.json
+++ b/Projet5/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Projet5-a3332974-ea34-4df2-9a65-313dd7e21c3b;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=.;Database=micka;Trusted_Connection=True;TrustServerCertificate=True;"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
